--- a/index.html
+++ b/index.html
@@ -1311,7 +1311,7 @@
                 </div>
                 <div class="typing-text" id="typing-text"></div>
             </div>
-            <a href="./docs/Rahul_Resume.pdf" target="_blank" class="cta-button fade-in-up" download>Download Resume</a>
+            <a href="./docs/FRahul_Resume.docx" target="_blank" class="cta-button fade-in-up" download>Download Resume</a>
         </div>
     </section>
 
@@ -1827,10 +1827,6 @@
             </div>
         </div>
     </section>
-
-
-
-    
 
     <section id="contact">
         <h2 class="section-title fade-in-up">Get In Touch</h2>
