Update skill tags and add AWS Load Balancers

--- a/index.html
+++ b/index.html
@@ -973,10 +973,9 @@
                 <h3><i class="fas fa-cloud"></i> Cloud & Infrastructure</h3>
                 <div class="skill-tags">
                     <span class="skill-tag">AWS (EC2, VPC, IAM, S3)</span>
-                    <span class="skill-tag">Azure DevOps</span>
                     <span class="skill-tag">Azure Front Door</span>
                     <span class="skill-tag">CloudFront</span>
-                    <span class="skill-tag">Load Balancers</span>
+                    <span class="skill-tag">AWS Load Balancers</span>
                 </div>
             </div>
 
@@ -985,9 +984,7 @@
                 <div class="skill-tags">
                     <span class="skill-tag">PowerShell</span>
                     <span class="skill-tag">Ansible (YAML)</span>
-                    <span class="skill-tag">Python</span>
                     <span class="skill-tag">API Integration</span>
-                    <span class="skill-tag">Bash</span>
                 </div>
             </div>
 
